# TrON

./: .gitignore  CITATION.cff  README.md  environment.yml  setup.cfg  setup.py
bayesian_analysis/: fitting_loop.py  model_utils.py  summary_plots.py
example_analysis/: 207161_model.py  207169_model.py  fit_207168.py  fit_workflow_207168.py  model-loop-207168.py
example_analysis/data/: REFL_207169_combined_data_auto.txt  r207168-time-resolved.json  r207168_t000000.txt  r207168_t000030.txt  r207168_t000060.txt  r207168_t000090.txt  r207168_t000120.txt  r207168_t000150.txt  r207168_t000180.txt  r207168_t000210.txt  r207168_t000240.txt  r207168_t000270.txt  r207168_t000300.txt  r207168_t000330.txt  r207168_t000360.txt  r207168_t000390.txt  r207168_t000420.txt  r207168_t000450.txt  r207168_t000480.txt  r207168_t000510.txt  r207168_t000540.txt  r207168_t000570.txt  r207168_t000600.txt  r207168_t000630.txt  r207168_t000660.txt
example_analysis/dyn-fitting/207161/: 207161_model-1-expt.json  207161_model-err.json
example_analysis/dyn-fitting/207169/: 207169_model-1-expt.json  207169_model-err.json  207169_model.err  207169_model.json  207169_model.out  207169_model.par
example_analysis/notebooks/: model-loop-tmp.py  summary-Cu-F.ipynb  workflow-test.ipynb
notebooks/: summary-Cu-F.ipynb
tron/bayesian_analysis/: fit_uncertainties.py  fitting_loop.py  model_utils.py  summary_plots.py  template.py
ui/: bayesian_ui.py  launcher.py
