[metadata]
name = tron
version = attr: tron.__version__
description = TrON is a package to analyse time-resolved neutron reflectometry data
author = Mat
author_email = m2d@ornl.gov
url = https://github.com/mdoucet/TrON
long_description = file: README.md
license = BSD 3-Clause License

[options]
include_package_data = False
python_requires >= 3.8
packages = find:

install_requires =
    lmfit
    numpy
    matplotlib
    refl1d